# component-rs

./: .gitattributes  .gitignore
component/: Cargo.toml  build.rs  component.winmd
component/.windows/winmd/: component.winmd
component/src/: bindings.rs  component.idl  component.rs  lib.rs  main.rs
cppwinrt/: cppwinrt.sln  cppwinrt.vcxproj  main.cpp  pch.h
cswinrt/: Program.cs  cswinrt.csproj  cswinrt.sln
netframework/: Program.cs  netframework.csproj  netframework.exe.manifest  netframework.sln
netframework/Properties/: AssemblyInfo.cs
