[package]
name = "component"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
#version = "0.33"
path = "/git/windows-rs/crates/libs/windows"
features = [
    "implement",
    "Win32_Foundation",
]

[build-dependencies.windows-bindgen]
#version = "0.33.0"
path = "/git/windows-rs/crates/libs/bindgen"

[lib]
crate-type = ["cdylib"]
