[package]
name = "component"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
#version = "0.33"
git = "https://github.com/microsoft/windows-rs"
features = [
    "implement",
    "Win32_Foundation",
]

[build-dependencies.windows-bindgen]
#version = "0.33.0"
git = "https://github.com/microsoft/windows-rs"

[lib]
crate-type = ["cdylib"]
